master: protect your api

--- a/Architect API integration in Azure/3 .Protect your APIs.md
+++ b/Architect API integration in Azure/3 .Protect your APIs.md
@@ -1,9 +1,70 @@
 # [Protect your APIs on Azure API Management](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/index)
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/1-introduction/)
 - [Remove technical information from API responses](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/2-remove-technical-info/)
+  ```xml
+    <outbound>
+        <set-header name="X-Powered-By" exists-action="delete" />
+        <base />
+    </outbound>
+  ```
 - [Exercise - Remove header information](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/3-exercise-remove-header/)
 - [Mask URLs with a transformation policy](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/4-hide-url-transformation/)
+  - Transformation policy
+    |Transform|	Detail|
+    |---|---|
+    |Convert JSON to XML|	Converts a request or response body from JSON to XML.|
+    |Convert XML to JSON|	Converts a request or response body from XML to JSON.|
+    |Find and replace string in body|	Finds a request or response substring and replaces it with a different substring.|
+    |Mask URLs in content|	Rewrites links in the response body so that they point to the equivalent link through the gateway.|
+    |Set backend service|	Changes the backend service for an incoming request.|
+    |Set body|	Sets the message body for incoming and outgoing requests.|
+    |Set HTTP header|	Assigns a value to an existing response or request header, or adds a new response or request header.|
+    |Set query string parameter|	Adds, replaces the value of, or deletes a request query string parameter.|
+    |Rewrite URL|	Converts a request URL from its public form to the form expected by the web service.|
+    |Transform XML using an XSLT|	Applies an XSL transformation to the XML in the request or response body.|
 - [Exercise - Mask URLs with a transformation policy](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/5-exercise-hide-url/)
+  - `<redirect-content-urls />`
+    - You should now see how the Mask URL transformation policy has altered the links within the response body to the API Management endpoints.
 - [Throttle API requests](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/6-rate-limit-policy/)
+  - Limit by subscription throttling
+    - Subscription throttling allows you to set the rate limits by a specific API operation.
+    - This configuration would result in clients receiving a **429** error when that limit was reached.
+    - The problem with this type of throttling is that it allows one client to use up all the requests before another client can use it.
+    - Applies to all API operations
+        ```xml
+        <rate-limit calls="3" renewal-period="15" />
+        ```
+    - This configuration can be used to target a particular API operation:
+        ```xml
+        <rate-limit calls="number" renewal-period="seconds">
+            <api name="API name" id="API id" calls="number" renewal-period="seconds" />
+                <operation name="operation name" id="operation id" calls="number" renewal-period="seconds" />
+            </api>
+        </rate-limit>
+        ```
+  - Limit by key throttling
+    - Key throttling allows you to configure different rate limits by any client request value. This type of throttling offers a better way of managing the rate limits as it applies the limit to a specified request key, often the client IP address. It gives every client equal bandwidth for calling the API
+    ```xml
+    <rate-limit-by-key calls="number"
+                    renewal-period="seconds"
+                    increment-condition="condition"
+                    counter-key="key value" />
+    ```
+    - An example configuration to limit rate limit by a requests IP Address would be:
+        ```xml
+        <rate-limit-by-key calls="10"
+                renewal-period="60"
+                increment-condition="@(context.Response.StatusCode == 200)"
+                counter-key="@(context.Request.IpAddress)"/>
+        ```
+    - When you choose to throttle by key, you will need to decide on specific requirements for rate limiting. For example, the table below lists three common ways of specifying the counter-key:
+        |Value|	Detail|
+        |---|---|
+        |`context.Request.IpAddress`|	Rates limited by client IP address|
+        |`context.Subscription.Id`|	Rates limited by subscription ID|
+        |`context.Request.Headers.GetValue("My-Custom-Header-Value")`|	Rates limited by a specified client request header value|
 - [Exercise - Throttle API requests](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/7-exercise-rate-limit-policy/)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/protect-apis-on-api-management/8-summary/)
+  - [API Management documentation](https://docs.microsoft.com/azure/api-management/)
+  - [Transform and protect your API](https://docs.microsoft.com/azure/api-management/transform-api)
+  - [Advanced request throttling with Azure API Management](https://docs.microsoft.com/azure/api-management/api-management-sample-flexible-throttling)
