master: minor changes

--- a/Architect network infrastructure in Azure/2. Network security groups.md
+++ b/Architect network infrastructure in Azure/2. Network security groups.md
@@ -139,7 +139,8 @@
         --resource-group $rg \
         --name ERP-DB-SERVERS-ASG
       ```
-    - associate Nic with ASG
+    - **associate Nic/VM with ASG**
+      - **In the portal, the UI is in VM -> Networking rather than Nic related.**
       ```
         az network nic ip-config update \
         --resource-group $rg \
