master: some understanding

--- a/Architect network infrastructure in Azure/3. Virtual network peering.md
+++ b/Architect network infrastructure in Azure/3. Virtual network peering.md
@@ -78,3 +78,32 @@
   - To test the connectivities between each other, try `ssh` using private IP from the Sales VMs
     - `ssh -o StrictHostKeyChecking=no azureuser@<MarketingVM private IP>`
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/6-summary)
+
+
+
+
+Powershell section:
+
+```powershell
+#To get help
+Get-azcommand vm
+
+dir -force
+
+Get-AzPublicIpAddress `
+  -Name myVm1 `
+  -ResourceGroupName myResourceGroup `
+  | Select IpAddress
+
+New-AzVm `
+  -ResourceGroupName "myResourceGroup" `
+  -Location "East US" `
+  -VirtualNetworkName "myVirtualNetwork" `
+  -SubnetName "default" `
+  -Name "myVm1" `
+  -AsJob
+
+#That command lets ICMP inbound through the Windows firewall.
+New-NetFirewallRule –DisplayName "Allow ICMPv4-In" –Protocol ICMPv4
+
+```
