--- a/Architect network infrastructure in Azure/6 .Application Gateway.md
+++ b/Architect network infrastructure in Azure/6 .Application Gateway.md
@@ -40,7 +40,9 @@ OneNote Link
       - A listener accepts traffic arriving on **a specified combination** of protocol, port, host, and IP address. **Each listener routes requests to a back-end pool** of servers following routing rules that you specify.
       - A listener can be **Basic** or **Multi-site**.
       - Listeners also handle **SSL certificates** for securing your application between the user and Application Gateway.
-      - 
+      - **Understanding**
+        - Listener is the only component that is not in Load balancer
+        - Because in load balancer rule is mapping from a port to the backend pool, and in gateway there are more ways to do it, using port, path, protocal, I guess that's why this is introduced to the gateway. So that those settings are a standalong component as "listener". And the rule will have less stuff in it. 
     - **Routing rules**
       - A routing rule binds **hostname and path elements** to the **back-end pools **
       - A routing rule also has an associated set of HTTP settings including
@@ -160,3 +162,4 @@ OneNote Link
 
 - [Exercise - Test your Application Gateway](https://docs.microsoft.com/en-au/learn/modules/load-balance-web-traffic-with-application-gateway/6-exercise-test-application-gateway)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/load-balance-web-traffic-with-application-gateway/7-summary)
+  - https://docs.microsoft.com/en-au/azure/application-gateway/application-gateway-components
