master: revisit Connect your on-premises network with VPN Gateway

--- a/AZ-300-Prep/Architect network infrastructure in Azure/0. VPN Gateway.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/0. VPN Gateway.md
@@ -1,22 +1,26 @@
 ## [Connect your on-premises network to Azure with VPN Gateway](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/index)
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/1-introduction)
 - [Connect on-premises networks to Azure by using site-to-site VPN gateways](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/2-connect-on-premises-networks-to-azure-using-site-to-site-vpn-gateways)
-  - Azure VPN gateways
+  - **Azure VPN gateways**
     - A VPN gateway is a type of Virtual Network Gateway. VPN gateways are deployed in Azure virtual networks and enable the following connectivity:
   	  - Connect on-premises datacenters to Azure virtual networks through a **site-to-site** connection.
   	  - Connect individual devices to Azure virtual networks through a **point-to-site** connection.
   	  - Connect Azure virtual networks to other Azure virtual networks through a **network-to-network** connection.
-	  - You can deploy only one VPN gateway in each virtual network, but you can use one gateway to connect to multiple locations.
-   - VPN type
+	  - You can deploy only **one VPN gateway** in each virtual network, but you can use **one gateway to connect to multiple locations**.
+   - **VPN type**
      - Policy-based VPNs
        - Support for IKEv1 only.
+       - Internet Key Exchange (IKE)
        - For compatibility with legacy on-premises VPN devices.
+       - *Static routing*
      - Route-based VPNs
        - Supports IKEv2.
+       - *dynamic routing*
+         - Instead, data packets are encrypted based on network routing tables that are created dynamically using routing protocols such as *BGP (Border Gateway Protocol)*.
      - Both types of VPN gateways (route-based and policy-based) in Azure use **pre-shared key** as the only method of authentication. 
   - Deploying VPN gateways
     - Required Azure resources
-      - **Virtual network**. Deploy an Azure virtual network with enough address space for the additional subnet that you'll need for the VPN gateway. The address space for this virtual network must not overlap with the on-premises network that you'll be connecting to. Remember that you can deploy only one VPN gateway within a virtual network.
+      - **Virtual network**. Deploy an Azure virtual network with enough address space for the additional subnet that you'll need for the VPN gateway. The address space for this virtual network **must not overlap** with the on-premises network that you'll be connecting to. Remember that you can deploy only one VPN gateway within a virtual network.
       - **GatewaySubnet**. Deploy a subnet called GatewaySubnet for the VPN gateway. Use at least a /27 address mask to make sure you have enough IP addresses in the subnet for future growth. You can't use this subnet for any other services.
       - **Public IP address**. 
       - **Local network gateway**. Create a local network gateway to define the on-premises network's configuration: where the VPN gateway will connect and what it will connect to. This configuration includes the on-premises VPN device's public IPv4 address and the on-premises routable networks. This information is used by the VPN gateway to route packets that are destined for on-premises networks through the IPSec tunnel.
@@ -29,13 +33,14 @@
       - A **public-facing** (internet-routable) IPv4 address
     ![](2019-11-07-21-31-15.png)
 - High availability scenarios
-  - Active/standby
+  - **Active/standby**
     - By default, VPN gateways are deployed as two instances in an active/standby configuration, even if you only see one VPN gateway resource in Azure. 
-  - Active/active
+    - When planned maintenance or unplanned disruption affects the active instance, the standby instance automatically assumes responsibility for connections without any user intervention.
+  - **Active/active**
     - With the introduction of support for the BGP routing protocol, you can also deploy VPN gateways in an active/active configuration. In this configuration, you assign a unique public IP address to each instance.
-  - ExpressRoute failover
+  - **ExpressRoute failover**
     - Another high availability option is to configure a VPN gateway as a secure failover path for ExpressRoute connections.
-  - Zone-redundant gateways
+  - **Zone-redundant gateways**
     - In regions that support availability zones, VPN and ExpressRoute gateways can be deployed in a zone-redundant configuration.
 
 - [Exercise - Prepare Azure and on-premises virtual networks by using Azure CLI commands](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/3-exercise-prepare-azure-and-on-premises-vnets-using-azure-cli-commands)
@@ -133,6 +138,10 @@
   - Create the connections
     - Create the shared key to use for the connections. In the following command, replace <shared key> with a text string to use for the IPSec pre-shared key. The pre-shared key is a string of printable ASCII characters no longer than 128 characters. You'll use this pre-shared key on both connections.
       ```
+      SHAREDKEY=<shared key>
+      ```
+    - Run this command in Cloud Shell to create a connection from **VNG-Azure-VNet-1** to **LNG-HQ-Network**.
+      ```
         az network vpn-connection create \
         --resource-group [sandbox resource group name] \
         --name Azure-VNet-1-To-HQ-Network \
@@ -140,16 +149,7 @@
         --shared-key $SHAREDKEY \
         --local-gateway2 LNG-HQ-Network
       ```
-    - Run this command in Cloud Shell to create a connection from VNG-Azure-VNet-1 to LNG-HQ-Network.
-      ```
-        az network vpn-connection create \
-          --resource-group [sandbox resource group name] \
-          --name HQ-Network-To-Azure-VNet-1  \
-          --vnet-gateway1 VNG-HQ-Network \
-          --shared-key $SHAREDKEY \
-          --local-gateway2 LNG-Azure-VNet-1
-      ```
-    - Run this command in Cloud Shell to create a connection from VNG-HQ-Network to LNG-Azure-VNet-1.This connection would normally be created from your on-premises device.
+    - Run this command in Cloud Shell to create a connection from **VNG-HQ-Network** to **LNG-Azure-VNet-1**.This connection would normally be created from your on-premises device.
       ```
         az network vpn-connection create \
           --resource-group [sandbox resource group name] \
@@ -160,4 +160,6 @@
       ```
   - Verification steps
     - using `az network vpn-connection show`
+  - The final structure
+    - ![](The%20final%20structure%20explained.png)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/5-summary)
