master: express route

--- a/AZ-300-Prep/Architect network infrastructure in Azure/0. VPN Gateway.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/0. VPN Gateway.md
@@ -1,4 +1,5 @@
 ## [Connect your on-premises network to Azure with VPN Gateway](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/index)
+- revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/1-introduction)
 - [Connect on-premises networks to Azure by using site-to-site VPN gateways](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/2-connect-on-premises-networks-to-azure-using-site-to-site-vpn-gateways)
   - **Azure VPN gateways**
