--- a/AZ-300-Prep/Architect network infrastructure in Azure/1. ExpressRoute.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/1. ExpressRoute.md
@@ -1,5 +1,5 @@
 ## [Connect your on-premises network to the Microsoft global network by using ExpressRoute](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/index)
-
+- revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/1-introduction)
   
 - [What is the Azure ExpressRoute service?](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/2-expressroute-service)
@@ -41,7 +41,7 @@
     - Use **Microsoft peering** to connect to Azure PaaS services, Office 365 services, and Dynamics 365.
     - ![](2019-11-07-22-35-31.png)
   - Create an ExpressRoute circuit and peering
-    - Create a circuit
+    - **Create a circuit**
       - When you're using the Azure portal, select Create a resource > Networking > ExpressRoute. 
           |Property	|Value|
           | ----------- | ----------- |
@@ -54,7 +54,7 @@
           |Subscription|	The subscription you've registered with your ExpressRoute provider.|
           |Resource group|	The Azure resource group in which to create the circuit.|
           |Location|	The Azure location in which to create the circuit.|
-    - Create a peering configuration
+    - **Create a peering configuration**
       - Configure private peering
       - Configure Microsoft peering
   - Connect a virtual network to an ExpressRoute circuit
